Fix horizontal scrollbar.

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ pre {
     background: rgb(238, 232, 213);
     margin: 0 -2em 0 -2em;
     padding: 4px 2em 4px 2em;
+    overflow-x: auto;
 }
 
 header {
